# driverator

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.ai-docs/: cacherator.md  docorator.md  google-api-python-client.md  google-auth.md  readmerator.md  searcherator.md  smartspread.md
data/cache/: driverator-1pyu0vdqh5eimy7y0ktfindjxci9g7hsz.json  driverator-driverator-test.json  driverator-feature-test-txt.json  driverator-test-report-txt.json
driverator/: __init__.py  auth_helper.py  driverator.py
tests/: test_driverator.py
